--- a/build_histograms_11_12_2024.ipynb
+++ b/build_histograms_11_12_2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,148 +12,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "from datetime import datetime\n",
-    "\n",
-    "def get_ordered_syllable_for_song(song_syllable_onsets_offsets_ms):\n",
-    "    \"\"\"Using syllable_onsets_offsets_ms dictionary return an ordered list of tuples (syllable_label, onset, offset)\n",
-    "\n",
-    "    syllable_onsets_offsets_ms (dict)\n",
-    "        key: syllable_label\n",
-    "        value: list of tuples (onset time, offset time)\n",
-    "\n",
-    "    Alas python dictionaries are not ordered, so we can't rely on the order of the keys.\n",
-    "    \"\"\"\n",
-    "    raw_syllable_tuples = []\n",
-    "    for syllable_label, times in song_syllable_onsets_offsets_ms.items():\n",
-    "        for start, end in times:\n",
-    "            raw_syllable_tuples.append((syllable_label, start, end))\n",
-    "\n",
-    "    sorted_syllable_tuples = sorted(raw_syllable_tuples, key=lambda x: x[1])\n",
-    "    return sorted_syllable_tuples\n",
-    "\n",
-    "\n",
-    "# Function to extract animal_id and convert date/time to a datetime object using named groups\n",
-    "def get_recording_time_from_filename(recording_file_path_name):\n",
-    "    try:\n",
-    "        # Define the regex pattern with named groups for animal_id, month, day, hour, minute, and second\n",
-    "        pattern = r'(?P<animal_id>[\\w\\d]+)_\\d+\\.\\d+_(?P<month>\\d+)_(?P<day>\\d+)_(?P<hour>\\d+)_(?P<minute>\\d+)_(?P<second>\\d+)\\.wav$'\n",
-    "\n",
-    "        # Search for the pattern in the file path\n",
-    "        match = re.search(pattern, recording_file_path_name)\n",
-    "\n",
-    "        if match:\n",
-    "            # Use the named groups to extract the values\n",
-    "            animal_id = match.group('animal_id')\n",
-    "            month = match.group('month').zfill(2)\n",
-    "            day = match.group('day').zfill(2)\n",
-    "            hour = match.group('hour').zfill(2)\n",
-    "            minute = match.group('minute').zfill(2)\n",
-    "            second = match.group('second').zfill(2)\n",
-    "\n",
-    "            # Construct a datetime object (assuming the year is 2024 for this example)\n",
-    "            date_time_str = f\"2024-{month}-{day} {hour}:{minute}:{second}\"\n",
-    "            date_time_obj = datetime.strptime(date_time_str, '%Y-%m-%d %H:%M:%S')\n",
-    "\n",
-    "            return animal_id, date_time_obj\n",
-    "        else:\n",
-    "            return None, None  # Return None if no match is found\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error: {e}\")\n",
-    "        return None, None\n",
-    "\n",
-    "#results[1]['file_name'], get_recording_time_from_filename(results[1]['file_name'])"
+    "from dataset_parser import (\n",
+    "    get_ordered_syllable_for_song,\n",
+    "    get_recording_time_from_filename,\n",
+    "    load_single_bird_syllable_csv,\n",
+    "    split_dataset_by_surgery_date\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "('USA5288_45355.32438532_3_4_9_0_38.wav',\n",
-       " ('USA5288', datetime.datetime(2024, 3, 4, 9, 0, 38)))"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "52151\n",
+      "{'animal_id': 'USA5288',\n",
+      " 'file_name': 'USA5288_45355.32438532_3_4_9_0_38.wav',\n",
+      " 'ordered_and_timed_syllables': [('8', 0.0, 1813.3333333333335),\n",
+      "                                 ('21', 1813.3333333333335, 3348.730158730159),\n",
+      "                                 ('22', 3348.730158730159, 4425.396825396826),\n",
+      "                                 ('21', 4425.396825396826, 4611.587301587302),\n",
+      "                                 ('22', 4611.587301587302, 4619.68253968254),\n",
+      "                                 ('21', 4619.68253968254, 4622.380952380952),\n",
+      "                                 ('22', 4622.380952380952, 4625.079365079366),\n",
+      "                                 ('21', 4625.079365079366, 4630.476190476191),\n",
+      "                                 ('26', 4630.476190476191, 4751.904761904762),\n",
+      "                                 ('23', 4751.904761904762, 5010.952380952382),\n",
+      "                                 ('2', 5010.952380952382, 5785.396825396826),\n",
+      "                                 ('3', 5785.396825396826, 8041.269841269842),\n",
+      "                                 ('26', 8041.269841269842, 8068.253968253969),\n",
+      "                                 ('5', 8068.253968253969, 8618.730158730159),\n",
+      "                                 ('11', 8618.730158730159, 8929.04761904762),\n",
+      "                                 ('14', 8929.04761904762, 9028.888888888889)],\n",
+      " 'recording_time': datetime.datetime(2024, 3, 4, 9, 0, 38),\n",
+      " 'song_present': 'True'}\n"
+     ]
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(None, None)"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import csv\n",
-    "import json\n",
-    "\n",
+    "import pprint\n",
     "file_path = 'Modeling_phys_canary/USA5288_decoded.csv'\n",
     "\n",
-    "def unescape_and_eval(v):\n",
-    "    if v.startswith(\"''\"):\n",
-    "        v = v.replace(\"''\", \"\")\n",
-    "    if v.startswith(\"'\"):\n",
-    "        v = v.replace(\"'\", \"\")\n",
-    "\n",
-    "    return eval(v)\n",
-    "\n",
-    "results = []\n",
-    "with open(file_path, 'r') as f:\n",
-    "    reader = csv.DictReader(f)\n",
-    "\n",
-    "    for row in reader:\n",
-    "        syllable_onsets_offsets_timebins = unescape_and_eval(row['syllable_onsets_offsets_timebins'])\n",
-    "        syllable_onsets_offsets_ms = unescape_and_eval(row['syllable_onsets_offsets_ms'])\n",
-    "\n",
-    "        ordered_and_timed_syllables = get_ordered_syllable_for_song(syllable_onsets_offsets_ms)\n",
-    "        animal_id, recording_time = get_recording_time_from_filename(row['file_name'])\n",
-    "\n",
-    "        data = {\n",
-    "            \"file_name\": row['file_name'],\n",
-    "            \"song_present\": row['song_present'],\n",
-    "            #'syllable_onsets_offsets_timebins': syllable_onsets_offsets_timebins,\n",
-    "            #'syllable_onsets_offsets_ms': syllable_onsets_offsets_ms,\n",
-    "\n",
-    "            'animal_id': animal_id,\n",
-    "            'recording_time': recording_time,\n",
-    "\n",
-    "            'ordered_and_timed_syllables': ordered_and_timed_syllables\n",
-    "        }\n",
-    "\n",
-    "        results.append(data)\n"
+    "results = load_single_bird_syllable_csv(file_path)\n",
+    "print(len(results))\n",
+    "pprint.pprint(results[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -162,12 +77,14 @@
        "datetime.datetime(2024, 4, 9, 0, 0)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import json\n",
+    "from datetime import datetime\n",
     "json_file_path = 'Modeling_phys_canary/USA5288_creation_data.json'\n",
     "\n",
     "with open(json_file_path, 'r') as f:\n",
@@ -181,46 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'file_name': 'USA5288_45355.32438532_3_4_9_0_38.wav',\n",
-       " 'song_present': 'True',\n",
-       " 'animal_id': 'USA5288',\n",
-       " 'recording_time': datetime.datetime(2024, 3, 4, 9, 0, 38),\n",
-       " 'ordered_and_timed_syllables': [('8', 0.0, 1813.3333333333335),\n",
-       "  ('21', 1813.3333333333335, 3348.730158730159),\n",
-       "  ('22', 3348.730158730159, 4425.396825396826),\n",
-       "  ('21', 4425.396825396826, 4611.587301587302),\n",
-       "  ('22', 4611.587301587302, 4619.68253968254),\n",
-       "  ('21', 4619.68253968254, 4622.380952380952),\n",
-       "  ('22', 4622.380952380952, 4625.079365079366),\n",
-       "  ('21', 4625.079365079366, 4630.476190476191),\n",
-       "  ('26', 4630.476190476191, 4751.904761904762),\n",
-       "  ('23', 4751.904761904762, 5010.952380952382),\n",
-       "  ('2', 5010.952380952382, 5785.396825396826),\n",
-       "  ('3', 5785.396825396826, 8041.269841269842),\n",
-       "  ('26', 8041.269841269842, 8068.253968253969),\n",
-       "  ('5', 8068.253968253969, 8618.730158730159),\n",
-       "  ('11', 8618.730158730159, 8929.04761904762),\n",
-       "  ('14', 8929.04761904762, 9028.888888888889)]}"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -229,27 +107,33 @@
        "(33374, 18777)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results_pre_surgery = []\n",
-    "results_post_surgery = []\n",
-    "\n",
-    "for result in results:\n",
-    "    recording_date = result['recording_time']\n",
-    "\n",
-    "    if recording_date < surgery_treatment_date:\n",
-    "        results_pre_surgery.append(result)\n",
-    "    elif recording_date == surgery_treatment_date:\n",
-    "        raise ValueError(\"Recording date is the same as the surgery date\")\n",
-    "    else:\n",
-    "        results_post_surgery.append(result)\n",
-    "\n",
+    "results_pre_surgery, results_post_surgery = split_dataset_by_surgery_date(results, surgery_treatment_date)\n",
     "len(results_pre_surgery), len(results_post_surgery)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(33374, 18777)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -262,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
