--- a/start-here.ipynb
+++ b/start-here.ipynb
@@ -149,7 +149,11 @@
     "\n",
     "```\n",
     "['8','21','22', '21', '22', '21','22','21','26','23','2','3','26','5','11','14']\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "We discussed two possible encodings\n",
+    "1. Have more symbols in the alphabet based on the length of the syllable for example '8Long' vs '8short'\n",
+    "2. Have multiple symbols per entry above based on the length of the syllable.. possible take the average length of a syllable across the dataset and have multiple repeating syllables. For example if '8' was average 100ms and this example is 800ms you would put in ['8','8','8','8','8','8',...]\n"
    ]
   },
   {
