--- a/experiment_2_avg_len_syllable/avg_len_syllable.ipynb
+++ b/experiment_2_avg_len_syllable/avg_len_syllable.ipynb
@@ -162,13 +162,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pre_surgery_pst = train_pst(pre_surgery_sequences, L)\n",
+    "alphabet = pre_surgery_pst.alphabet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['8', '21', '22', '26', '23', '2', '3', '5', '11', '14', '10', '12', '13', '0', '15', '16', '20', '27', '7', '4', '1', '9', '18', '17', '19', '6', '25', '24', '28', '29']\n"
+     ]
+    }
+   ],
+   "source": [
     "from train_pst_utils import train_pst\n",
     "\n",
     "L = 5\n",
     "\n",
-    "pre_surgery_pst = train_pst(pre_surgery_sequences, L)\n",
-    "alphabet = pre_surgery_pst.alphabet\n",
-    "post_surgery_pst = train_pst(post_surgery_sequences, alphabet=alphabet)\n",
+    "post_surgery_pst = train_pst(post_surgery_sequences, L, alphabet=alphabet)\n",
     "\n",
     "print(alphabet)"
    ]
