--- a/experiment_4_2D_syllables/2D_PST_comparison.ipynb
+++ b/experiment_4_2D_syllables/2D_PST_comparison.ipynb
@@ -870,8 +870,8 @@
     "    if type(pre_syl) == int:\n",
     "        if type(post_syl)==int:\n",
     "            plotsyl.append(cur_syl)\n",
-    "            norm_pre_probs = (pre_probs1 + (1e-12)) / np.sum(pre_probs)\n",
-    "            norm_post_probs = (post_probs1 + (1e-12)) / np.sum(post_probs)\n",
+    "            norm_pre_probs = (pre_probs1 + (1e-12)) / np.sum(pre_probs1)\n",
+    "            norm_post_probs = (post_probs1 + (1e-12)) / np.sum(post_probs1)\n",
     "            \n",
     "            #Computes the metrics comparing the order 1 between the\n",
     "            #  two datasets and prepares a list of results for\n",
@@ -883,16 +883,16 @@
     "\n",
     "            #DOES NOT WORK AS INTENDED\n",
     "            ###########################################################\n",
-    "            norm_pre_probs = (pre_probs2 + (1e-12)) / np.sum(pre_probs)\n",
-    "            norm_post_probs = (post_probs2 + (1e-12)) / np.sum(post_probs)\n",
+    "            norm_pre_probs = (pre_probs2 + (1e-12)) / np.sum(pre_probs2)\n",
+    "            norm_post_probs = (post_probs2 + (1e-12)) / np.sum(post_probs2)\n",
     "            \n",
     "            kld,emd,ig = calculate_metrics(norm_pre_probs, norm_post_probs)\n",
     "            plotKLD2.append(kld)\n",
     "            plotEMD2.append(emd)\n",
     "            plotIG2.append(ig) \n",
     "\n",
-    "            norm_pre_probs = (pre_probs3 + (1e-12)) / np.sum(pre_probs)\n",
-    "            norm_post_probs = (post_probs3 + (1e-12)) / np.sum(post_probs)\n",
+    "            norm_pre_probs = (pre_probs3 + (1e-12)) / np.sum(pre_probs3)\n",
+    "            norm_post_probs = (post_probs3 + (1e-12)) / np.sum(post_probs3)\n",
     "            \n",
     "            kld,emd,ig = calculate_metrics(norm_pre_probs, norm_post_probs)\n",
     "            plotKLD3.append(kld)\n",
@@ -1155,29 +1155,35 @@
     "            #norm_post_probs = (post_probs + (1e-12)) / np.sum(post_probs)\n",
     "            \n",
     "            plotsyl.append(cur_syl)\n",
-    "            norm_pre_probs = (pre_probs1 + (1e-12)) / np.sum(pre_probs)\n",
-    "            norm_post_probs = (post_probs1 + (1e-12)) / np.sum(post_probs)\n",
+    "            norm_pre_probs = (pre_probs1 + (1e-12)) / np.sum(pre_probs1)\n",
+    "            norm_post_probs = (post_probs1 + (1e-12)) / np.sum(post_probs1)\n",
     "            \n",
+    "            #Computes the metrics comparing the order 1 between the\n",
+    "            #  two datasets and prepares a list of results for\n",
+    "            #  plotting in the next cell\n",
     "            kld,emd,ig = calculate_metrics(norm_pre_probs, norm_post_probs)\n",
     "            plotKLD1.append(kld)\n",
     "            plotEMD1.append(emd)\n",
     "            plotIG1.append(ig) \n",
     "\n",
-    "            norm_pre_probs = (pre_probs2 + (1e-12)) / np.sum(pre_probs)\n",
-    "            norm_post_probs = (post_probs2 + (1e-12)) / np.sum(post_probs)\n",
+    "            #DOES NOT WORK AS INTENDED\n",
+    "            ###########################################################\n",
+    "            norm_pre_probs = (pre_probs2 + (1e-12)) / np.sum(pre_probs2)\n",
+    "            norm_post_probs = (post_probs2 + (1e-12)) / np.sum(post_probs2)\n",
     "            \n",
     "            kld,emd,ig = calculate_metrics(norm_pre_probs, norm_post_probs)\n",
     "            plotKLD2.append(kld)\n",
     "            plotEMD2.append(emd)\n",
     "            plotIG2.append(ig) \n",
     "\n",
-    "            norm_pre_probs = (pre_probs3 + (1e-12)) / np.sum(pre_probs)\n",
-    "            norm_post_probs = (post_probs3 + (1e-12)) / np.sum(post_probs)\n",
+    "            norm_pre_probs = (pre_probs3 + (1e-12)) / np.sum(pre_probs3)\n",
+    "            norm_post_probs = (post_probs3 + (1e-12)) / np.sum(post_probs3)\n",
     "            \n",
     "            kld,emd,ig = calculate_metrics(norm_pre_probs, norm_post_probs)\n",
     "            plotKLD3.append(kld)\n",
     "            plotEMD3.append(emd)\n",
     "            plotIG3.append(ig) \n",
+    "            ###########################################################\n",
     "            #pprint.pprint(metrics)"
    ]
   },
@@ -1383,29 +1389,36 @@
     "        if type(post_syl)==int:\n",
     "            \n",
     "            plotsyl.append(cur_syl)\n",
-    "            norm_pre_probs = (pre_probs1 + (1e-12)) / np.sum(pre_probs)\n",
-    "            norm_post_probs = (post_probs1 + (1e-12)) / np.sum(post_probs)\n",
+    "\n",
+    "            norm_pre_probs = (pre_probs1 + (1e-12)) / np.sum(pre_probs1)\n",
+    "            norm_post_probs = (post_probs1 + (1e-12)) / np.sum(post_probs1)\n",
     "            \n",
+    "            #Computes the metrics comparing the order 1 between the\n",
+    "            #  two datasets and prepares a list of results for\n",
+    "            #  plotting in the next cell\n",
     "            kld,emd,ig = calculate_metrics(norm_pre_probs, norm_post_probs)\n",
     "            plotKLD1.append(kld)\n",
     "            plotEMD1.append(emd)\n",
     "            plotIG1.append(ig) \n",
     "\n",
-    "            norm_pre_probs = (pre_probs2 + (1e-12)) / np.sum(pre_probs)\n",
-    "            norm_post_probs = (post_probs2 + (1e-12)) / np.sum(post_probs)\n",
+    "            #DOES NOT WORK AS INTENDED\n",
+    "            ###########################################################\n",
+    "            norm_pre_probs = (pre_probs2 + (1e-12)) / np.sum(pre_probs2)\n",
+    "            norm_post_probs = (post_probs2 + (1e-12)) / np.sum(post_probs2)\n",
     "            \n",
     "            kld,emd,ig = calculate_metrics(norm_pre_probs, norm_post_probs)\n",
     "            plotKLD2.append(kld)\n",
     "            plotEMD2.append(emd)\n",
     "            plotIG2.append(ig) \n",
     "\n",
-    "            norm_pre_probs = (pre_probs3 + (1e-12)) / np.sum(pre_probs)\n",
-    "            norm_post_probs = (post_probs3 + (1e-12)) / np.sum(post_probs)\n",
+    "            norm_pre_probs = (pre_probs3 + (1e-12)) / np.sum(pre_probs3)\n",
+    "            norm_post_probs = (post_probs3 + (1e-12)) / np.sum(post_probs3)\n",
     "            \n",
     "            kld,emd,ig = calculate_metrics(norm_pre_probs, norm_post_probs)\n",
     "            plotKLD3.append(kld)\n",
     "            plotEMD3.append(emd)\n",
     "            plotIG3.append(ig) \n",
+    "            ###########################################################\n",
     "            \n",
     "            #pprint.pprint(metrics)"
    ]
